--- a/index.html
+++ b/index.html
@@ -28,24 +28,45 @@
   <!------------------------ NAVIGATION---------------------------->
   <header>
     <nav class="navbar">
-      <a href="#">
-        <img src="" alt="">
+      <a href="#" class="icon">
+        treine.me
       </a>
+      <ul class="nav-button-container">
+        <li><a href="#" class="nav-item hightlight">Home</a></li>
+        <li><a href="#" class="nav-item">About</a></li>
+        <li><a href="#" class="nav-item">Training</a></li>
+      </ul>
     </nav>
-    <ul class="nav-button-container">
-      <li></li>
-    </ul>
   </header>
   <!------------------------ HERO SECTION---------------------------->
   <section class="hero-section">
-    <h1 class="hero-heading">
-    </h1>
-    <p class="hero-paragraph">
-    </p>
-    <ul class="hero-btn-container">
-      <li><a href="#" class=""></a></li>
-    </ul>
+    <div class="left">
+      <h1 class="hero-heading">
+        workouts made <br>
+        <span class="hero-heading__hightlight">exclusive </span> for you
+      </h1>
+      <p class="hero-paragraph">
+        We create exclusive and unique workouts for you. <br>
+        Invest in your body and get much more performance <br>
+        and quality of life.
+      </p>
+      <ul class="hero-btn-container">
+        <li class="hero-buttons">
+          <a href="#" class="btn btn-primary">
+            <img src="./img/whatsapp.svg" alt="whatapps icon">
+            Start now</a>
+        </li>
+      </ul>
+    </div>
+    <div class="right">
+      <img class="hero-image" src="./img/hero-section.svg" alt="hero image">
+    </div>
   </section>
+  <p class="footer">
+    send us a message <span class="footer__hightlight">
+  @treine.me
+  </span>
+  </p>
 </div>
 
 <script src="js/app.js"></script>
